--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav nav-main">
 		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a href="products.html">ABOUT</a></li>
-					<li><a href="blog.html">FORUM</a></li>
-					<li><a href="blog-single.html">BMI</a></li>
-					<li><a href="blog-single.html">REGISTER</a></li>
-					<li><a href="blog-single.html">LOGIN</a></li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">FORUM</a></li>
+					<li><a href="#">BMI</a></li>
+					<li><a href="healthyFood.html">HEALTHY FOOD</a></li>
+					<li><a href="unhealthyFood.html">UNHEALTHY FOOD</a></li>
 		        </ul> <!-- End of /.nav-main -->
 		    </div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
