skin food completed

--- a/healthyFood.html
+++ b/healthyFood.html
@@ -758,6 +758,177 @@ SUMMARY: Oranges and other foods that are high in vitamin C can help defend your
 		</div>	<!-- End of /.container -->
 	</section>	<!-- End of Section -->
 
+	<!--Healthy Skin CATAGORIE Start
+		================================================== -->
+
+	<section id="catagorie">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="block">
+						<div class="block-heading">
+							<h2>FOOD FOR HEALTHY SKIN</h2>
+						</div>
+						<div class="row">
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/wine.jpg" alt="...">
+										<h3>RED WINE</h3>
+									</a>
+											<div class="caption">
+												<p>Red wine is famous for containing resveratrol, a compound that comes from the skin of red grapes.
+Resveratrol is credited with a wide range of health benefits, among them reducing the effects of aging.
+Test-tube studies suggest it may also slow the production of harmful free radicals, which damage skin cells and cause signs of aging.
+Unfortunately, there's not much evidence that the amount of resveratrol you get from a glass of red wine is enough to impact your skin. And since red wine is an alcoholic beverage, there are negative effects to drinking it in excess.
+It's not recommended to start drinking red wine just because of its potential health benefits. However, if you already drink in moderation, you might enjoy red wine as your alcoholic beverage of choice.
+SUMMARY Resveratrol, the famous antioxidant found in red wine, may slow your skin’s aging process by impairing harmful free radicals that damage your skin.
+<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/soy.jpg" alt="...">
+										<h3>SOY</h3>
+									</a>
+											<div class="caption">
+												<p> Soy contains isoflavones, a category of plant compounds that can either mimic or block estrogen in your body.
+Isoflavones may benefit several parts of your body, including your skin.
+One small study in middle-aged women found that eating soy isoflavones every day for 8–12 weeks reduced fine wrinkles and improved skin elasticity.
+In postmenopausal women, soy may also improve skin dryness and increase collagen, which helps keep your skin smooth and strong.
+These isoflavones not only protect the cells inside your body from damage but also your skin from UV radiation — which may help prevent some skin cancers.
+SUMMARY Soy contains isoflavones, which have been shown to improve wrinkles, collagen, skin elasticity and skin dryness, as well as protect your skin from UV damage.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/GreenTea.jpg" alt="...">
+										<h3>GREEN TEA</h3>
+									</a>
+											<div class="caption">
+												<p> Green tea may protect your skin from damage and aging.
+The powerful compounds found in green tea are called catechins and work to improve the health of your skin in several ways.
+Like several other antioxidant-containing foods, green tea can help protect your skin against sun damage.
+One 12-week study in 60 women found that drinking green tea daily could reduce redness from sun exposure by up to 25%. Green tea also improved the moisture, roughness, thickness and elasticity of their skin.
+While green tea is a great choice for healthy skin, you may want to avoid drinking your tea with milk. There's evidence that milk could reduce the impact of green tea’s antioxidants.
+SUMMARY The catechins found in green tea are powerful antioxidants that can protect your skin against sun damage and reduce redness as well as improve its hydration, thickness and elasticity.</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/tomatoes.jpg" alt="...">
+										<h3>TOMATOES</h3>
+									</a>
+											<div class="caption">
+												<p> Tomatoes are a great source of vitamin C and contain all of the major carotenoids, including lycopene.
+Beta-carotene, lutein and lycopene have been shown to protect your skin against damage from the sun. They may also help prevent wrinkling.
+Because tomatoes contain all of the major carotenoids, they’re an excellent food for maintaining healthy skin.
+Consider pairing carotenoid-rich foods like tomatoes with a source of fat, such as cheese or olive oil. Fat increases your absorption of carotenoids.
+SUMMARY Tomatoes are a good source of vitamin C and all of the major carotenoids, especially lycopene. These carotenoids protect your skin from sun damage and may help prevent wrinkling.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/sunflowerseeds.jpg" alt="...">
+										<h3>SUNFLOWER SEEDS</h3>
+									</a>
+											<div class="caption">
+												<p>In general, nuts and seeds are good sources of skin-boosting nutrients.
+Sunflower seeds are an excellent example.
+One ounce (28 grams) of sunflower seeds packs 37% of the RDI for vitamin E, 32% of the RDI for selenium, 10% of the RDI for zinc and 5.4 grams of protein.
+SUMMARY Sunflower seeds are an excellent source of nutrients, including vitamin E, which is an important antioxidant for the skin.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/nut.jpg" alt="...">
+										<h3>WALNUT</h3>
+									</a>
+											<div class="caption">
+												<p> Walnuts have many characteristics that make them an excellent food for healthy skin.
+They are a good source of essential fatty acids, which are fats that your body cannot make itself.
+In fact, they’re richer than most other nuts in both omega-3 and omega-6 fatty acids.
+A diet too high in omega-6 fats may promote inflammation, including inflammatory conditions of your skin like psoriasis. On the other hand, omega-3 fats reduce inflammation in your body — including in your skin.
+While omega-6 fatty acids are plentiful in the Western diet, sources of omega-3 fatty acids are rare. Because walnuts contain a good ratio of these fatty acids, they may fight the inflammatory response to excessive omega-6.
+What's more, walnuts contain other nutrients that your skin needs to function properly and stay healthy.
+One ounce (28 grams) of walnuts contains 6% of the RDI for zinc, which is essential for your skin to function properly as a barrier, as well as necessary for wound healing and combatting both bacteria and inflammation.
+Walnuts also provide small amounts of the antioxidants vitamin E, vitamin C and selenium, in addition to 4–5 grams of protein per ounce (28 grams) (12).
+SUMMARY Walnuts are a good source of essential fats, zinc, vitamin E, vitamin C, selenium and protein — all of which are nutrients your skin needs to stay healthy.
+.</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+						</div>	<!-- End of /.row -->
+					</div>	<!-- End of /.block -->
+				</div>	<!-- End of /.col-md-12 -->
+			</div>	<!-- End of /.row -->
+		</div>	<!-- End of /.container -->
+	</section>	<!-- End of Section -->
+
 		<!-- CALL TO ACTION Start
     ================================================== -->
 
