blood circulation food completed

--- a/healthyFood.html
+++ b/healthyFood.html
@@ -929,6 +929,334 @@ SUMMARY Walnuts are a good source of essential fats, zinc, vitamin E, vitamin C,
 		</div>	<!-- End of /.container -->
 	</section>	<!-- End of Section -->
 
+	<!--Increase Blood Flow and Circulation CATAGORIE Start
+		================================================== -->
+
+	<section id="catagorie">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="block">
+						<div class="block-heading">
+							<h2>FOOD FOR INCREASE BLODD FLOW and CIRCULATION</h2>
+						</div>
+						<div class="row">
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/Pomegranate.jpg" alt="...">
+										<h3>Pomegranate</h3>
+									</a>
+											<div class="caption">
+												<p> Pomegranates are juicy, sweet fruits that are particularly high in polyphenol antioxidants and nitrates, which are potent vasodilators.
+Consuming pomegranate — as juice, raw fruit or supplement — may improve blood flow and oxygenation of muscle tissue, which could especially aid active individuals.
+A study in 19 active people, found that ingesting 1,000 mg of pomegranate extract 30 minutes before working out increased blood flow, blood vessel diameter and exercise performance.
+Another study demonstrated that daily consumption of 17 ounces (500 ml) of pomegranate juice during or before weight training reduced soreness, muscle damage and inflammation in elite weightlifters.
+
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/onion.jpg" alt="...">
+										<h3>Onion</h3>
+									</a>
+											<div class="caption">
+												<p> Onions are an excellent source of flavonoid antioxidants, which benefit heart health.
+This vegetable improves circulation by helping your arteries and veins widen when blood flow increases.
+In a 30-day study in 23 men, taking 4.3 grams of onion extract daily significantly improved blood flow and artery dilation after meals.
+Onions also have anti-inflammatory properties, which can boost blood flow and heart health by reducing inflammation in veins and arteries.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/cayenne pepper.jpg" alt="...">
+										<h3>Cayenne Pepper</h3>
+									</a>
+											<div class="caption">
+												<p>Cayenne pepper gets its spicy flavor from a phytochemical called capsaicin.
+Capsaicin promotes blood flow to tissues by lowering blood pressure and stimulating the release of nitric oxide and other vasodilators — or compounds that help expand your blood vessels.
+Vasodilators allow blood to flow more easily through your veins and arteries by relaxing the tiny muscles found in blood vessel walls.
+Research indicates that ingesting cayenne pepper increases circulation, improves blood vessel strength and reduces plaque buildup in your arteries.
+What’s more, these spicy peppers are frequently included in pain-relieving creams because they can encourage blood flow to the affected area.
+</p>
+<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/cinnamon.jpg" alt="...">
+										<h3>Cinnamon</h3>
+									</a>
+											<div class="caption">
+												<p> Cinnamon is a warming spice that has many health benefits — including increased blood flow.
+In animal studies, cinnamon improved blood vessel dilation and blood flow in the coronary artery, which supplies blood to the heart.
+Rats fed 91 mg per pound (200 mg per kg) of body weight of cinnamon bark extract daily for eight weeks exhibited better heart performance and coronary artery blood flow after exhaustive exercise compared to rats in the control group (13Trusted Source).
+Plus, research shows that cinnamon can effectively reduce blood pressure in humans by relaxing your blood vessels. This improves circulation and keeps your heart healthy (14Trusted Source).
+In a study in 59 people with type 2 diabetes, 1,200 mg of cinnamon per day reduced systolic blood pressure (the top number of a reading) by an average of 3.4 mmHg after 12 weeks (15Trusted Source).
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/garlic.jpg" alt="...">
+										<h3>Garlic</h3>
+									</a>
+											<div class="caption">
+												<p>Garlic is well known for its beneficial impact on circulation and heart health.
+Studies suggest that garlic — specifically, its sulfur compounds, which include allicin — can increase tissue blood flow and lower blood pressure by relaxing your blood vessels.
+In fact, diets high in garlic are associated with better flow-mediated vasodilation (FMD), an indicator of blood flow efficiency.
+In a study in 42 people with coronary artery disease, those who consumed garlic powder tablets containing 1,200 mg of allicin twice daily for three months experienced a 50% improvement in blood flow through the upper arm artery compared to a placebo group.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/citrus fruits.jpg" alt="...">
+										<h3>citrus fruits</h3>
+									</a>
+											<div class="caption">
+												<p> Citrus fruits like oranges, lemons and grapefruit are packed with antioxidants, including flavonoids.
+Consuming flavonoid-rich citrus fruits may decrease inflammation in your body, which can reduce blood pressure and stiffness in your arteries while improving blood flow and nitric oxide production (26Trusted Source).
+In a study in 31 people, those who drank 17 ounces (500 ml) of blood orange juice per day for one week had significant improvements in artery dilation and large reductions in markers of inflammation such as IL-6 and CRP compared to a control group (27Trusted Source).
+Additionally, regular consumption of citrus fruits, such as lemon and grapefruit, has been associated with reduced blood pressure and a decreased risk of stroke (28Trusted Source, 29Trusted Source).
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+						</div>	<!-- End of /.row -->
+					</div>	<!-- End of /.block -->
+				</div>	<!-- End of /.col-md-12 -->
+			</div>	<!-- End of /.row -->
+		</div>	<!-- End of /.container -->
+	</section>	<!-- End of Section -->
+
+	<!--HEALTHY EYES CATAGORIE Start
+		================================================== -->
+
+	<section id="catagorie">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="block">
+						<div class="block-heading">
+							<h2>FOOD FOR INCREASE BLODD FLOW and CIRCULATION</h2>
+						</div>
+						<div class="row">
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/Pomegranate.jpg" alt="...">
+										<h3>Pomegranate</h3>
+									</a>
+											<div class="caption">
+												<p> Pomegranates are juicy, sweet fruits that are particularly high in polyphenol antioxidants and nitrates, which are potent vasodilators.
+Consuming pomegranate — as juice, raw fruit or supplement — may improve blood flow and oxygenation of muscle tissue, which could especially aid active individuals.
+A study in 19 active people, found that ingesting 1,000 mg of pomegranate extract 30 minutes before working out increased blood flow, blood vessel diameter and exercise performance.
+Another study demonstrated that daily consumption of 17 ounces (500 ml) of pomegranate juice during or before weight training reduced soreness, muscle damage and inflammation in elite weightlifters.
+
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/onion.jpg" alt="...">
+										<h3>Onion</h3>
+									</a>
+											<div class="caption">
+												<p> Onions are an excellent source of flavonoid antioxidants, which benefit heart health.
+This vegetable improves circulation by helping your arteries and veins widen when blood flow increases.
+In a 30-day study in 23 men, taking 4.3 grams of onion extract daily significantly improved blood flow and artery dilation after meals.
+Onions also have anti-inflammatory properties, which can boost blood flow and heart health by reducing inflammation in veins and arteries.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/cayenne pepper.jpg" alt="...">
+										<h3>Cayenne Pepper</h3>
+									</a>
+											<div class="caption">
+												<p>Cayenne pepper gets its spicy flavor from a phytochemical called capsaicin.
+Capsaicin promotes blood flow to tissues by lowering blood pressure and stimulating the release of nitric oxide and other vasodilators — or compounds that help expand your blood vessels.
+Vasodilators allow blood to flow more easily through your veins and arteries by relaxing the tiny muscles found in blood vessel walls.
+Research indicates that ingesting cayenne pepper increases circulation, improves blood vessel strength and reduces plaque buildup in your arteries.
+What’s more, these spicy peppers are frequently included in pain-relieving creams because they can encourage blood flow to the affected area.
+</p>
+<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/cinnamon.jpg" alt="...">
+										<h3>Cinnamon</h3>
+									</a>
+											<div class="caption">
+												<p> Cinnamon is a warming spice that has many health benefits — including increased blood flow.
+In animal studies, cinnamon improved blood vessel dilation and blood flow in the coronary artery, which supplies blood to the heart.
+Rats fed 91 mg per pound (200 mg per kg) of body weight of cinnamon bark extract daily for eight weeks exhibited better heart performance and coronary artery blood flow after exhaustive exercise compared to rats in the control group (13Trusted Source).
+Plus, research shows that cinnamon can effectively reduce blood pressure in humans by relaxing your blood vessels. This improves circulation and keeps your heart healthy (14Trusted Source).
+In a study in 59 people with type 2 diabetes, 1,200 mg of cinnamon per day reduced systolic blood pressure (the top number of a reading) by an average of 3.4 mmHg after 12 weeks (15Trusted Source).
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/garlic.jpg" alt="...">
+										<h3>Garlic</h3>
+									</a>
+											<div class="caption">
+												<p>Garlic is well known for its beneficial impact on circulation and heart health.
+Studies suggest that garlic — specifically, its sulfur compounds, which include allicin — can increase tissue blood flow and lower blood pressure by relaxing your blood vessels.
+In fact, diets high in garlic are associated with better flow-mediated vasodilation (FMD), an indicator of blood flow efficiency.
+In a study in 42 people with coronary artery disease, those who consumed garlic powder tablets containing 1,200 mg of allicin twice daily for three months experienced a 50% improvement in blood flow through the upper arm artery compared to a placebo group.
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/citrus fruits.jpg" alt="...">
+										<h3>citrus fruits</h3>
+									</a>
+											<div class="caption">
+												<p> Citrus fruits like oranges, lemons and grapefruit are packed with antioxidants, including flavonoids.
+Consuming flavonoid-rich citrus fruits may decrease inflammation in your body, which can reduce blood pressure and stiffness in your arteries while improving blood flow and nitric oxide production (26Trusted Source).
+In a study in 31 people, those who drank 17 ounces (500 ml) of blood orange juice per day for one week had significant improvements in artery dilation and large reductions in markers of inflammation such as IL-6 and CRP compared to a control group (27Trusted Source).
+Additionally, regular consumption of citrus fruits, such as lemon and grapefruit, has been associated with reduced blood pressure and a decreased risk of stroke (28Trusted Source, 29Trusted Source).
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+						</div>	<!-- End of /.row -->
+					</div>	<!-- End of /.block -->
+				</div>	<!-- End of /.col-md-12 -->
+			</div>	<!-- End of /.row -->
+		</div>	<!-- End of /.container -->
+	</section>	<!-- End of Section -->
+
 		<!-- CALL TO ACTION Start
     ================================================== -->
 
